--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="en>
 
 <head>
     <meta charset="UTF-8">
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-  <input id="close-menu" class="close-menu" type="checkbox" aria-label="close menu" role="button">
+  <input id="close-menu" class="close-menu" type="checkbox" aria-label="close menu" role="button" aria-pressed="">
   <label class="close-menu-label" for="close-menu" title="close-menu"></label>
   <aside class="menu white-bg">
     <div class="main-content menu-content">
